# my_stock_mcp_server

./: DEVELOPMENT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  mcp_server.py  pyproject.toml
src/: data_source_interface.py  stock_data_source.py
src/crawler/: basic_data.py  fundamental_data.py  technical_data.py  test.py  valuation_data.py
src/crawler_tools/: basic_data.py  technical_data.py
src/mcp_tools/: fundamental.py  real_time_data.py  valuation.py
src/tools/: kline_data.py  search.py
