[project]
name = "real-time-stock-mcp-service"
version = "0.1.0"
description = "一个获取实时股票数据服务和分析的MCP服务器"
authors = [
    {name = "茂", email = ""}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.2",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]